@@ -8,7 +8,7 @@
 ///        type, one array element (8 bytes) corresponds to an
 ///        interval of size 30 * 8 = 240.
 ///
-/// Copyright (C) 2023 Kim Walisch, <kim.walisch@gmail.com>
+/// Copyright (C) 2024 Kim Walisch, <kim.walisch@gmail.com>
 ///
 /// This file is distributed under the BSD License. See the COPYING
 /// file in the top level directory.
@@ -28,7 +28,7 @@
 namespace primecount {
 
 /// Compressed PrimePi(x) lookup table for x < 64 * 240.
-/// This lookup table has a size of 1 KiB, the 8 bits of each byte
+/// This lookup table has a size of 2 KiB, the 8 bits of each byte
 /// correspond to the offsets { 1, 7, 11, 13, 17, 19, 23, 29 }.
 /// This table has been generated by printing out the content of
 /// the sieve_ vector that is filled in PiTable::init().
@@ -37,7 +37,7 @@ namespace primecount {
 /// @bit_count: PrimePi(5) + count of 1-bits < current_index.
 /// @bits: 64-bit word whose 1-bits correspond to primes.
 ///
-const Array<PiTable::pi_t, 64> PiTable::pi_cache_ =
+const Array<PiTable::pi_t, 128> PiTable::pi_cache_ =
 {{
   {    3, 0xF93DDBB67EEFDFFEull }, {   52, 0x9EEDA6EAF31E4FD5ull },
   {   92, 0xA559DD3BD3D30CE6ull }, {  128, 0x56A61E78BD92676Aull },
@@ -70,7 +70,39 @@ const Array<PiTable::pi_t, 64> PiTable::pi_cache_ =
   { 1592, 0xA08AC312424892D5ull }, { 1615, 0x5C788582A4742D9Full },
   { 1645, 0xE8021D1461B0180Dull }, { 1667, 0x30831C4901C11218ull },
   { 1686, 0xF40C0FD888A13367ull }, { 1715, 0xB1474266D7588898ull },
-  { 1743, 0x155941180896A816ull }, { 1765, 0xA1AAB3E1522A44B5ull }
+  { 1743, 0x155941180896A816ull }, { 1765, 0xA1AAB3E1522A44B5ull },
+  { 1794, 0x0CA5111855624559ull }, { 1818, 0x0AD654BE00673CA3ull },
+  { 1847, 0x7E08150C826B3620ull }, { 1871, 0x840A61D078019156ull },
+  { 1893, 0x50A0560E57012CA8ull }, { 1916, 0x1063206C478C980Bull },
+  { 1939, 0x750B88570CE409C4ull }, { 1965, 0x022439C28252C20Bull },
+  { 1986, 0xA3D629317A25562Cull }, { 2016, 0x328A0CB018B1E120ull },
+  { 2038, 0x3730ADC5093211C1ull }, { 2064, 0x6B2520CF8291BC08ull },
+  { 2090, 0x076A4626448F309Cull }, { 2116, 0xC525021058098E49ull },
+  { 2137, 0x903C80A0805A42C4ull }, { 2156, 0x0C518403E1146428ull },
+  { 2176, 0x7E47C008A48AA32Eull }, { 2203, 0x04002A54CD032BD3ull },
+  { 2226, 0xC1834C29426C92B3ull }, { 2252, 0x38DB21462D1CCC92ull },
+  { 2280, 0xE0BB5812248C8459ull }, { 2305, 0x912809C930700D06ull },
+  { 2326, 0xC280308CF9324441ull }, { 2348, 0x1483817D0C62A472ull },
+  { 2373, 0x14780A82150EAAE1ull }, { 2397, 0xB2F02E6F10089770ull },
+  { 2425, 0x866253324449301Dull }, { 2449, 0xD9364B110A844565ull },
+  { 2475, 0x197C9080613A698Cull }, { 2500, 0x2D050C8B409530C0ull },
+  { 2521, 0x1A8596B4A171C00Eull }, { 2547, 0xB7484C511415C016ull },
+  { 2571, 0xA1022E8A89109579ull }, { 2595, 0x220891108190D51Cull },
+  { 2614, 0x5C2033C078E91EB4ull }, { 2642, 0x471023AAE20EC48Bull },
+  { 2668, 0xA851A1197B5528E3ull }, { 2697, 0x6061D12C82900406ull },
+  { 2716, 0x23548144410652A1ull }, { 2736, 0x4872222704A91888ull },
+  { 2757, 0x29CA1712421C40B6ull }, { 2781, 0x898452E13C015AA0ull },
+  { 2804, 0xD2692CF1064001DAull }, { 2829, 0xC88A3421C1634248ull },
+  { 2851, 0x442E88092671216Cull }, { 2874, 0xD11286981D9228D5ull },
+  { 2900, 0x5014462046A0A352ull }, { 2920, 0x8CA9445083DDDC83ull },
+  { 2948, 0x391B8914542E144Dull }, { 2974, 0x02808F2981148042ull },
+  { 2991, 0x0C05B08382963203ull }, { 3012, 0x1AECD9F807885114ull },
+  { 3040, 0x230686435C314806ull }, { 3062, 0xB2F000A50C4409B3ull },
+  { 3085, 0xB618C242E1CA0180ull }, { 3107, 0x612C29522EC79B2Cull },
+  { 3136, 0x5E80848B24268A1Aull }, { 3159, 0x2145352A53C10260ull },
+  { 3181, 0x04484AC5B842D152ull }, { 3204, 0xC45009C161237016ull },
+  { 3226, 0x28221601D9188881ull }, { 3245, 0x09532438EB84908Cull },
+  { 3269, 0x30860982146A41A9ull }, { 3290, 0x5A952B004238A29Cull }
 }};
 
 PiTable::PiTable(uint64_t max_x, int threads) :
